# vfilesystem

./: .gitignore  CMakeLists.txt  Makefile  README.md  vfilesystem.sln
.github/workflows/: pragma-generic-ci.yml  pragma-linux-ci.yml  pragma-windows-ci.yml
include/fsys/: directory_watcher.h  file_index_cache.hpp  filesystem.h  filesystem_mount.h  filesystem_stream.hpp  fsys_definitions.hpp  fsys_package.hpp  fsys_searchflags.hpp  fsys_shared.h  ifile.hpp  vfileptr.h
src/: bzlib_wrapper.hpp  definitions.hpp  directory_watcher.cpp  fcaseopen.c  fcaseopen.h  file_index_cache.cpp  filedata.cpp  filesystem.cpp  filesystem2.cpp  filesystem_mount.cpp  filesystem_stream.cpp  ifile.cpp  impl_fsys_util.cpp  impl_fsys_util.hpp  main.cpp  root_paths.cpp  vfilesystem_package.cpp
src/implementation/: bs_thread_pool.cpp  case_open.cpp  directory_watcher.cpp  file_data.cpp  file_index_cache.cpp  file_interface.cpp  file_system.cpp  file_system2.cpp  mount.cpp  package.cpp  root_paths.cpp  stream.cpp  util.cpp
src/interface/: case_open.cppm  directory_watcher.cppm  enums.cppm  file_handle.cppm  file_index_cache.cppm  file_interface.cppm  file_system.cppm  mount.cppm  package.cppm  search_flags.cppm  stream.cppm  util.cppm  vfilesystem.cppm
vfilesystem/: vfilesystem.vcxproj  vfilesystem.vcxproj.filters
